fixed the vertical align to login page

--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -4,7 +4,9 @@
 }
 
 .login__content {
+  position: relative;
+  top: 50%;
   max-width: 500px;
   margin: 0 auto;
-  transform: translateY(50%);
+  transform: translatey(-50%);
 }
